--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/mdx": "^16.0.1",
+    "@prisma/client": "^6.19.0",
     "framer-motion": "^12.23.24",
     "next": "16.0.1",
+    "next-auth": "^5.0.0-beta.30",
     "next-mdx-remote": "^5.0.0",
+    "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sharp": "^0.34.5"
